--- a/ams.yml
+++ b/ams.yml
@@ -23,3 +23,12 @@
 
     - name: Update apt and install docker-ce
       apt: update_cache=yes name=docker-ce state=latest
+      
+      
+    - name: Pull docker image
+      docker_image:
+        name: "sebp/elk"
+        source: pull
+        
+    
+    
