--- a/templates/docker-compose.yml
+++ b/templates/docker-compose.yml
@@ -7,6 +7,11 @@ services:
                         - "5601:5601"
                         - "9200:9200"
                         - "5044:5044"
+                volumes:
+                        - ./configs/elasticsearch.yml:/etc/elasticsearch/elasticsearch.yml
+                        - ./configs/kibana.yml:/opt/kibana/config/kibana.yml
+                        - ./configs/02-beats-input.conf:/etc/logstash/conf.d/02-beats-input.conf
+                        - ./configs/30-output.conf:/etc/logstash/conf.d/30-output.conf
 
         prometheus:
                 image: prom/prometheus:latest
