--- a/ams.yml
+++ b/ams.yml
@@ -63,5 +63,38 @@
       community.docker.docker_compose:
         project_src: "/home/"
       register: options
+      
+    - name: Change ownership of elasticsearch.keystore
+      community.docker.docker_container_exec:
+        container: home_elk_1
+        command: chown elasticsearch:elasticsearch /etc/elasticsearch/elasticsearch.keystore
+      
+    - name: change elastic bootstrap password
+      community.docker.docker_container_exec:
+        container: home_elk_1
+        command: echo "123456789" | /opt/elasticsearch/bin/elasticsearch-keystore "bootstrap.password" -x
+        
+    - name: restart elasticsearch
+      community.docker.docker_container_exec:
+        container: home_elk_1
+        command: service elasticsearch restart
+        
+    - name: change elastic user password
+      community.docker.docker_container_exec:
+        container: home_elk_1
+        command: curl -uelastic:"1234565789" -XPUT -H 'Content-Type: application/json' 'http://localhost:9200/_xpack/security/user/elastic/_password' -d '{ "password":"123456789" }'
+        
+    - name: change kibana_system user password
+      community.docker.docker_container_exec:
+        container: home_elk_1
+        command: curl -uelastic:"1234565789" -XPUT -H 'Content-Type: application/json' 'http://localhost:9200/_xpack/security/user/kibana_system/_password' -d '{ "password":"123456789" }'
     
-    
+    - name: restart elasticsearch
+      community.docker.docker_container_exec:
+        container: home_elk_1
+        command: service elasticsearch restart
+        
+    - name: restart kibana
+      community.docker.docker_container_exec:
+        container: home_elk_1
+        command: service kibana restart
