--- a/ams.yml
+++ b/ams.yml
@@ -98,3 +98,19 @@
       community.docker.docker_container_exec:
         container: home_elk_1
         command: service kibana restart
+   
+   # Instalar mini-httpd
+     - name: Install mini-httpd
+       apt:
+        name: mini-httpd
+
+     # Copiar a pasta da plataforma Web para a VM
+     - name: Copy Web platform files
+       copy:
+        src: './AMSWebPlatform/'
+        dest: '/home/AMSWebPlatform/'
+        mode: 0666
+
+     # Iniciar a plataforma web com o mini-httpd
+     - name: Inicialize Web platform
+       command: sudo mini_httpd -p 80 -d /home/AMSWebPlatform
