--- a/ams.yml
+++ b/ams.yml
@@ -66,6 +66,7 @@
       
     - name: Change ownership of elasticsearch.keystore
       community.docker.docker_container_exec:
+        delay: 10
         container: home_elk_1
         command: chown elasticsearch:elasticsearch /etc/elasticsearch/elasticsearch.keystore
       
