--- a/ams.yml
+++ b/ams.yml
@@ -64,9 +64,12 @@
         project_src: "/home/"
       register: options
       
+    - name: Sleep for 10 seconds
+        wait_for:
+          timeout: 10
+      
     - name: Change ownership of elasticsearch.keystore
       community.docker.docker_container_exec:
-        delay: 10
         container: home_elk_1
         command: chown elasticsearch:elasticsearch /etc/elasticsearch/elasticsearch.keystore
       
