--- a/templates/prometheus/alert.yml
+++ b/templates/prometheus/alert.yml
@@ -8,12 +8,12 @@ groups:
     # Annotation - additional informational labels to store more information
     annotations:
       title: 'Instance {{ $labels.instance }} down'
-      description: '{{ $labels.instance }} of job {{ $labels.job }} has been dow                                                                                                             n for more than 1 minute.'
+      description: '{{ $labels.instance }} of job {{ $labels.job }} has been down for more than 1 minute.'
     # Labels - additional labels to be attached to the alert
     labels:
       severity: 'critical'
     #------------------------------------------------------------------
-    # ALGUNS ALERTS SAO REFERENTES A JOBS NAO EXISTENTES, VER SE VALE A PENA INS                                                                                                             ERIR JOB em .yml
+    # ALGUNS ALERTS SAO REFERENTES A JOBS NAO EXISTENTES, VER SE VALE A PENA INSERIR JOB em .yml
     #----------------------------Prometheus----------------------------
   - alert: PrometheusTargetMissing
     expr: up == 0
@@ -22,7 +22,7 @@ groups:
       severity: critical
     annotations:
       summary: Prometheus target missing (instance {{ $labels.instance }})
-      description: "A Prometheus target has disappeared. An exporter might be cr                                                                                                             ashed.\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+      description: "A Prometheus target has disappeared. An exporter might be crashed.\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
     #------------------------------------------------------------------
   - alert: PrometheusConfigurationReloadFailure
     expr: prometheus_config_last_reload_successful != 1
@@ -30,8 +30,8 @@ groups:
     labels:
       severity: warning
     annotations:
-      summary: Prometheus configuration reload failure (instance {{ $labels.inst                                                                                                             ance }})
-      description: "Prometheus configuration reload error\n  VALUE = {{ $value }                                                                                                             }\n  LABELS = {{ $labels }}"
+      summary: Prometheus configuration reload failure (instance {{ $labels.instance }})
+      description: "Prometheus configuration reload error\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
     #------------------------------------------------------------------
   - alert: PrometheusAlertmanagerConfigNotSynced
     expr: count(count_values("config_hash", alertmanager_config_hash)) > 1
@@ -39,8 +39,8 @@ groups:
     labels:
       severity: warning
     annotations:
-      summary: Prometheus AlertManager config not synced (instance {{ $labels.in                                                                                                             stance }})
-      description: "Configurations of AlertManager cluster instances are out of                                                                                                              sync\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+      summary: Prometheus AlertManager config not synced (instance {{ $labels.instance }})
+      description: "Configurations of AlertManager cluster instances are out of sync\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
     #------------------------------------------------------------------
   - alert: PrometheusAlertmanagerConfigurationReloadFailure
     expr: alertmanager_config_last_reload_successful != 1
@@ -48,8 +48,8 @@ groups:
     labels:
       severity: warning
     annotations:
-      summary: Prometheus AlertManager configuration reload failure (instance {{                                                                                                              $labels.instance }})
-      description: "AlertManager configuration reload error\n  VALUE = {{ $value                                                                                                              }}\n  LABELS = {{ $labels }}"
+      summary: Prometheus AlertManager configuration reload failure (instance {{ $labels.instance }})
+      description: "AlertManager configuration reload error\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
     #------------------------------------------------------------------
   - alert: PrometheusNotConnectedToAlertmanager
     expr: prometheus_notifications_alertmanagers_discovered < 1
@@ -57,8 +57,8 @@ groups:
     labels:
       severity: critical
     annotations:
-      summary: Prometheus not connected to alertmanager (instance {{ $labels.ins                                                                                                             tance }})
-      description: "Prometheus cannot connect the alertmanager\n  VALUE = {{ $va                                                                                                             lue }}\n  LABELS = {{ $labels }}"
+      summary: Prometheus not connected to alertmanager (instance {{ $labels.instance }})
+      description: "Prometheus cannot connect the alertmanager\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
     #-------------------Node exporter host hardware--------------------
   - alert: HostOutOfMemory
     expr: node_memory_MemAvailable_bytes / node_memory_MemTotal_bytes * 100 < 10
@@ -67,7 +67,7 @@ groups:
       severity: warning
     annotations:
       summary: Host out of memory (instance {{ $labels.instance }})
-      description: "Node memory is filling up (< 10% left)\n  VALUE = {{ $value                                                                                                              }}\n  LABELS = {{ $labels }}"
+      description: "Node memory is filling up (< 10% left)\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
     #---------------------Container information------------------------
   - alert: ContainerKilled
     expr: time() - container_last_seen > 60
@@ -76,25 +76,25 @@ groups:
       severity: warning
     annotations:
       summary: Container killed (instance {{ $labels.instance }})
-      description: "A container has disappeared\n  VALUE = {{ $value }}\n  LABEL                                                                                                             S = {{ $labels }}"
+      description: "A container has disappeared\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
     #------------------------------------------------------------------
   - alert: ContainerCpuUsage
-    expr: (sum(rate(container_cpu_usage_seconds_total{name!=""}[3m])) BY (instan                                                                                                             ce, name) * 100) > 80
+    expr: (sum(rate(container_cpu_usage_seconds_total{name!=""}[3m])) BY (instance, name) * 100) > 80
     for: 2m
     labels:
       severity: warning
     annotations:
       summary: Container CPU usage (instance {{ $labels.instance }})
-      description: "Container CPU usage is above 80%\n  VALUE = {{ $value }}\n                                                                                                               LABELS = {{ $labels }}"
+      description: "Container CPU usage is above 80%\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"                                                                                                              LABELS = {{ $labels }}"
     #------------------------------------------------------------------
   - alert: ContainerMemoryUsage
-    expr: (sum(container_memory_working_set_bytes{name!=""}) BY (instance, name)                                                                                                              / sum(container_spec_memory_limit_bytes > 0) BY (instance, name) * 100) > 80
+    expr: (sum(container_memory_working_set_bytes{name!=""}) BY (instance, name) / sum(container_spec_memory_limit_bytes > 0) BY (instance, name) * 100) > 80
     for: 2m
     labels:
       severity: warning
     annotations:
       summary: Container Memory usage (instance {{ $labels.instance }})
-      description: "Container Memory usage is above 80%\n  VALUE = {{ $value }}\                                                                                                             n  LABELS = {{ $labels }}"
+      description: "Container Memory usage is above 80%\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
     #-------------------------Kube-State-Metrics-----------------------
   - alert: KubernetesJobFailed
     expr: kube_job_status_failed > 0
@@ -103,23 +103,22 @@ groups:
       severity: warning
     annotations:
       summary: Kubernetes Job failed (instance {{ $labels.instance }})
-      description: "Job {{$labels.namespace}}/{{$labels.exported_job}} failed to                                                                                                              complete\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+      description: "Job {{$labels.namespace}}/{{$labels.exported_job}} failed to complete\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
     #------------------------------------------------------------------
   - alert: KubernetesPodNotHealthy
-    expr: min_over_time(sum by (namespace, pod) (kube_pod_status_phase{phase=~"P                                                                                                             ending|Unknown|Failed"})[15m:1m]) > 0
+    expr: min_over_time(sum by (namespace, pod) (kube_pod_status_phase{phase=~"Pending|Unknown|Failed"})[15m:1m]) > 0
     for: 0m
     labels:
       severity: critical
     annotations:
       summary: Kubernetes Pod not healthy (instance {{ $labels.instance }})
-      description: "Pod has been in a non-ready state for longer than 15 minutes                                                                                                             .\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+      description: "Pod has been in a non-ready state for longer than 15 minutes.\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
     #------------------------------------------------------------------
   - alert: KubernetesApiServerErrors
-    expr: sum(rate(apiserver_request_total{job="apiserver",code=~"^(?:5..)$"}[1m                                                                                                             ])) / sum(rate(apiserver_request_total{job="apiserver"}[1m])) * 100 > 3
+    expr: sum(rate(apiserver_request_total{job="apiserver",code=~"^(?:5..)$"}[1m])) / sum(rate(apiserver_request_total{job="apiserver"}[1m])) * 100 > 3
     for: 2m
     labels:
       severity: critical
     annotations:
       summary: Kubernetes API server errors (instance {{ $labels.instance }})
-      description: "Kubernetes API server is experiencing high error rate\n  VAL                                                                                                             UE = {{ $value }}\n  LABELS = {{ $labels }}"
-
+      description: "Kubernetes API server is experiencing high error rate\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
