--- a/withRoles/roles/elk/tasks/main.yml
+++ b/withRoles/roles/elk/tasks/main.yml
@@ -2,13 +2,13 @@
 - name: Copy ELK config files
   template:
     src: configs
-    dest: {{ docker_compose_dir }}
+    dest: "{{ docker_compose_dir }}"
     mode: 0666
 
 - name: Copy compose source templates
   template:
     src: docker-compose.yml
-    dest: {{ docker_compose_dir }}
+    dest: "{{ docker_compose_dir }}"
     mode: 0666
 
 - name: Build container with docker-compose
