--- a/withRoles/roles/grafana/tasks/main.yml
+++ b/withRoles/roles/grafana/tasks/main.yml
@@ -1,9 +1,8 @@
 ---
----
 - name: Copy compose source templates
   template:
     src: docker-compose.yml
-    dest: {{ docker_compose_dir }}
+    dest: "{{ docker_compose_dir }}"
     mode: 0666
 
 - name: Build container with docker-compose
