--- a/withRoles/roles/alertmanager/tasks/main.yml
+++ b/withRoles/roles/alertmanager/tasks/main.yml
@@ -1,8 +1,13 @@
 ---
-- name: Copy Alertmanager config files
+- name: create the directory alertmanager
+  file:
+    path: "{{ docker_compose_dir }}"/alertmanager
+    state: directory
+
+- name: Copy alertmanager config file
   template:
-    src: alertmanager
-    dest: "{{ docker_compose_dir }}"
+    src: alertmanager.yml
+    dest: "{{ docker_compose_dir }}"/alertmanager
     mode: 0666
 
 - name: Copy compose source templates
