--- a/withRoles/roles/elk/templates/30-output.conf
+++ b/withRoles/roles/elk/templates/30-output.conf
@@ -4,6 +4,6 @@ output {
     manage_template => false
     index => "%{[@metadata][beat]}-%{+YYYY.MM.dd}"
     user => "elastic"
-    password => {{ pass_elasticsearch }} 
+    password => "{{ pass_elasticsearch }}"
 }
 }
