--- a/withRoles/roles/elk/templates/kibana.yml
+++ b/withRoles/roles/elk/templates/kibana.yml
@@ -30,7 +30,7 @@ server.host: "0.0.0.0"
 # index at startup. Your Kibana users still need to authenticate with Elasticsearch, which
 # is proxied through the Kibana server.
 elasticsearch.username: "kibana_system"
-elasticsearch.password: {{ pass_elasticsearch }}
+elasticsearch.password: "{{ pass_elasticsearch }}"
 
 # Paths to the PEM-format SSL certificate and SSL key files, respectively. These
 # files enable SSL for outgoing requests from the Kibana server to the browser.
