--- a/withRoles/roles/alertmanager/tasks/main.yml
+++ b/withRoles/roles/alertmanager/tasks/main.yml
@@ -5,8 +5,8 @@
     state: directory
 
 - name: Copy alertmanager config file
-  template:
-    src: alertmanager.yml
+  copy:
+    src: './roles/alertmanager/templates/alertmanager.yml'
     dest: "{{ docker_compose_dir }}/alertmanager"
     mode: 0666
 
