--- a/withRoles/roles/prometheus/templates/alert.yml
+++ b/withRoles/roles/prometheus/templates/alert.yml
@@ -85,7 +85,7 @@ groups:
       severity: warning
     annotations:
       summary: Container CPU usage (instance {{ $labels.instance }})
-      description: "Container CPU usage is above 80%\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"                                                                                                              LABELS = {{ $labels }}"
+      description: "Container CPU usage is above 80%\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
     #------------------------------------------------------------------
   - alert: ContainerMemoryUsage
     expr: (sum(container_memory_working_set_bytes{name!=""}) BY (instance, name) / sum(container_spec_memory_limit_bytes > 0) BY (instance, name) * 100) > 80
