--- a/withRoles/roles/alertmanager/templates/alertmanager.yml
+++ b/withRoles/roles/alertmanager/templates/alertmanager.yml
@@ -1,6 +1,6 @@
 global:
         resolve_timeout: 1m
-        slack_api_url: 'https://hooks.slack.com/services/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'
+        slack_api_url: {{ hooks_slack }}
 
 route:
         receiver: 'slack-notifications'
@@ -8,28 +8,28 @@ route:
 receivers:
 - name: 'slack-notifications'
   slack_configs:
-  - channel: '#alertmanager'
+  - channel: {{ channel_name }}
     send_resolved: true
     icon_url: https://avatars3.githubusercontent.com/u/3380462
     title: |-
-     [{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}] {{ .CommonLabels.alertname }} for {{ .CommonLabels.job }}
-     {{- if gt (len .CommonLabels) (len .GroupLabels) -}}
-       {{" "}}(
-       {{- with .CommonLabels.Remove .GroupLabels.Names }}
-         {{- range $index, $label := .SortedPairs -}}
-           {{ if $index }}, {{ end }}
-           {{- $label.Name }}="{{ $label.Value -}}"
-         {{- end }}
-       {{- end -}}
+     [\{\{ .Status | toUpper \}\}\{\{ if eq .Status "firing" \}\}:\{\{ .Alerts.Firing | len \}\}\{\{ end \}\}] \{\{ .CommonLabels.alertname \}\} for \{\{ .CommonLabels.job \}\}
+     \{\{- if gt (len .CommonLabels) (len .GroupLabels) -\}\}
+       \{\{" "\}\}(
+       \{\{- with .CommonLabels.Remove .GroupLabels.Names \}\}
+         \{\{- range $index, $label := .SortedPairs -\}\}
+           \{\{ if $index \}\}, \{\{ end \}\}
+           \{\{- $label.Name \}\}="\{\{ $label.Value -\}\}"
+         \{\{- end \}\}
+       \{\{- end -\}\}
        )
-     {{- end }}
+     \{\{- end \}\}
     text: >-
-     {{ range .Alerts -}}
-     *Alert:* {{ .Annotations.title }}{{ if .Labels.severity }} - `{{ .Labels.severity }}`{{ end }}
+     \{\{ range .Alerts -\}\}
+     *Alert:* \{\{ .Annotations.title \}\}\{\{ if .Labels.severity \}\} - `\{\{ .Labels.severity \}\}`\{\{ end \}\}
 
-     *Description:* {{ .Annotations.description }}
+     *Description:* \{\{ .Annotations.description \}\}
 
      *Details:*
-       {{ range .Labels.SortedPairs }} • *{{ .Name }}:* `{{ .Value }}`
-       {{ end }}
-     {{ end }}
+       \{\{ range .Labels.SortedPairs \}\} • *\{\{ .Name \}\}:* `\{\{ .Value \}\}`
+       \{\{ end \}\}
+     \{\{ end \}\}
