--- a/withRoles/roles/alertmanager/templates/alertmanager.yml
+++ b/withRoles/roles/alertmanager/templates/alertmanager.yml
@@ -1,6 +1,6 @@
 global:
         resolve_timeout: 1m
-        slack_api_url: {{ hooks_slack }}
+        slack_api_url: '{{ hooks_slack }}'
 
 route:
         receiver: 'slack-notifications'
@@ -8,7 +8,7 @@ route:
 receivers:
 - name: 'slack-notifications'
   slack_configs:
-  - channel: {{ channel_name }}
+  - channel: '{{ channel_name }}'
     send_resolved: true
     icon_url: https://avatars3.githubusercontent.com/u/3380462
     title: |-
