--- a/withRoles/roles/elk/tasks/main.yml
+++ b/withRoles/roles/elk/tasks/main.yml
@@ -58,6 +58,8 @@
   community.docker.docker_container_exec:
     container: home_elk_1
     command: service elasticsearch restart
+  environment:
+    ES_CONNECT_RETRY: 100
 
 - name: wait for elastisearch to be up
   wait_for_connection:
