--- a/withRoles/roles/elk/templates/docker-compose.yml
+++ b/withRoles/roles/elk/templates/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
         elk:
                 image: sebp/elk
+		restart: unless-stopped
                 ports:
                         - "5601:5601"
                         - "9200:9200"
