--- a/AMSAutomatization/ansible/group_vars/all.yml
+++ b/AMSAutomatization/ansible/group_vars/all.yml
@@ -7,17 +7,17 @@ common_member_of: sudo
 docker_compose_dir: /home
 
 #kube-state-metrics
-ip_kube_state_metrics: ['10.8.0.5:8080']
+ip_kube_state_metrics: ['123.123.123.1:8080']
 
 #node-exporter
-ips_node_exporter: ['10.8.0.2:9100','10.8.1.2:9100','10.8.2.2:9100']
+ips_node_exporter: ['1.1.1.1:9100','1.1.1.2:9100','1.1.1.3:9100']
 
 #Hooks slack
-hooks_slack: 'https://hooks.slack.com/services/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'
+hooks_slack: 'secret'
 
 #Channel name
 channel_name: '#alertmanager'
 
 #Pass do elasticsearch
-pass_elasticsearch: "123456789"
+pass_elasticsearch: "secret"
 
